--- a/app/views/warehouses/show.html.erb
+++ b/app/views/warehouses/show.html.erb
@@ -1,11 +1,30 @@
+<section>
+
 <h2> Galpão <%=@warehouse.code %> </h2>
 <div>
-<strong>Nome:</strong> <%= @warehouse.name %>
-<strong>Código:</strong> <%= @warehouse.code %>
-<strong>Cidade:</strong> <%= @warehouse.city %>
-<strong>Área:</strong> <%= @warehouse.area %> m²
-<strong>Endereço:</strong> <%= @warehouse.address %> <strong>CEP:</strong> <%= @warehouse.zipcode %> 
-<strong>Descrição:</strong> <%= @warehouse.description %> 
+    <dl>
+        <dt><strong>Nome:</strong></dt>
+        <dd><%= @warehouse.name %></dd>
+        
+        <dt><strong>Código:</strong></dt>
+        <dd><%= @warehouse.code %></dd>
+        
+        <dt><strong>Cidade:</strong></dt>
+        <dd><%= @warehouse.city %></dd>
+
+        <dt><strong>Área:</strong></dt>
+        <dd><%= @warehouse.area %> m²</dd>
+
+        <dt><strong>Endereço:</strong></dt>
+        <dd><%= @warehouse.address %></dd>
+
+        <dt><strong>CEP:</strong></dt>
+        <dd><%= @warehouse.zipcode %></dd>
+
+        <dt><strong>Descrição:</strong></dt>
+        <dd><%= @warehouse.description %></dd>
+    </dl> 
 </div>
 
 <%= link_to 'Voltar', root_path%>
+</section>
