--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
       <h1>Galpões & Estoque</h1>
     </header>
     <main>
+      <div>
+        <%= flash[:notice]%> <!-- ou somente notice -->
+      </div>
       <%= yield %>
     </main>
   </body>
