--- a/app/views/warehouses/edit.html.erb
+++ b/app/views/warehouses/edit.html.erb
@@ -1,16 +1,7 @@
-<h1> Novo Galpão </h1>
-
-<% if(@warehouse.errors.any?) %>
-    <p>Verifique os erros abaixo:</p>
-    <ul> 
-        <% @warehouse.errors.full_messages.each do |msg| %> 
-            <li> <%= msg %> </li>
-        <% end %>
-    </ul>
-<% end %>
+<h1> Editar Galpão </h1>
 
 <%= form_with(model: @warehouse) do |f| %>
-        <div> 
+    <div> 
         <%= f.label :name %>
         <%= f.text_field :name %>
     </div>
