--- a/app/views/warehouses/show.html.erb
+++ b/app/views/warehouses/show.html.erb
@@ -19,12 +19,13 @@
         <dd><%= @warehouse.address %></dd>
 
         <dt><strong>CEP:</strong></dt>
-        <dd><%= @warehouse.zipcode %></dd>
+        <dd><%= @warehouse.zipcode%></dd>
 
         <dt><strong>Descrição:</strong></dt>
         <dd><%= @warehouse.description %></dd>
     </dl> 
 </div>
 
+<%= link_to 'Editar Galpão', edit_warehouse_path(@warehouse.id)%>
 <%= link_to 'Voltar', root_path%>
 </section>
