--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,11 @@
 <section id="warehouses">
     <h2> Galpões </h2>
     <div>
-        <%= link_to 'Cadastrar Galpão', new_warehouse_path %>
-
-    
+        <%= link_to 'Cadastrar Galpão', new_warehouse_url %>
     </div>
         <% @warehouses.each do |w| %>
             <div>
-                <h3><%= link_to w.name, warehouse_path(w.id) %></h3>
+                <h3><%= link_to w.name, warehouse_url(w.id) %></h3>
                 <dl>
                     <dt> Código: </dt>
                     <dd><%= w.code %></dd>
