add pagina de cadastro de fornecedores com validacao e i18n

--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -1,7 +1,7 @@
 <section id="suppliers">
 	<h2> Fornecedores </h2>
 	<div>
-			<%# link_to 'Cadastrar Galpão', new_warehouse_url %>
+			<%= link_to 'Cadastrar fornecedores', new_supplier_url %>
 	</div>
 
   <% if @suppliers.any? %>
