--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -15,7 +15,7 @@
       <tbody>
         <% @suppliers.each do |s| %>
           <tr>
-            <td><%= link_to s.brand_name, supplier_url(s.id) %></td>
+            <td><%= link_to s.brand_name, s %></td>
             <td><%= s.city %> - <%= s.state %></td>
           </tr>
         <% end %>
