--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
     <header>
       <h1>Galpões & Estoque</h1>
       <nav>
-        <%= link_to 'Fornecedores', suppliers_url %>
+        <%= link_to 'Fornecedores', suppliers_url %> | 
+        <%= link_to 'Modelos de produtos', product_models_url %>
       </nav>
     </header>
     <main>
