--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,3 +1,13 @@
 body {
     background-color:rgb(242, 209, 255);
 }
+
+nav {
+
+}
+
+button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer
+}
