--- a/app/views/product_models/new.html.erb
+++ b/app/views/product_models/new.html.erb
@@ -1,4 +1,4 @@
-<h2> Novo modelo de produtos</h2>
+<h2> <%= ProductModel.human_attribute_name(:new_product_model)%> </h2>
 
 <% if(@product_model.errors.any?) %> <%# Validação de erros%>
 	<p>Verifique os erros abaixo:</p>
