--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,13 +19,21 @@
         <%= link_to 'Fornecedores', suppliers_url %> | 
         <%= link_to 'Modelos de produtos', product_models_url %> |
         <%= link_to 'Registrar pedido', new_order_url %> |
+        <%= link_to 'Meus pedidos', orders_url %> |
 
+        <!-- Config login -->
         <% if user_signed_in? %>
+          <%= form_with(url: search_orders_url, method: :get) do |f| %>
+            <%= f.label :query, 'Buscar pedido' %>:
+            <%= f.text_field :query %>
+            <%= f.submit 'Buscar'%>
+        <% end %>
           <%= current_user.description %> |
           <%= button_to 'Sair', destroy_user_session_url, method: :delete %> 
         <% else %>
           <%= link_to 'Entrar', new_user_session_url %> 
         <% end %>
+
       </nav>
     </header>
     <main>
