--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,17 +1,12 @@
 <h2> <%= Order.human_attribute_name(:register_order) %> </h2>
 
-<%= form_with(model: @order) do |f| %>
-  <div>
-    <%= f.label :warehouse_id %>: 
-    <%= f.collection_select :warehouse_id, @warehouses, :id, :full_description %>
-  </div>
-  <div>
-    <%= f.label :supplier_id %>: 
-    <%= f.collection_select :supplier_id, @suppliers, :id, :full_supplier %>
-  </div>
-  <div>
-    <%= f.label :estimated_delivery_date %>: 
-    <%= f.date_field :estimated_delivery_date %>
-  </div>
-  <%= f.submit 'Registrar' %>
+<% if(@order.errors.any?) %> <%# Validação de erros%>
+	<p>Verifique os erros abaixo:</p>
+	<ul> 
+		<% @order.errors.full_messages.each do |msg| %> 
+			<li> <%= msg %> </li>
+		<% end %>
+	</ul>
 <% end %>
+
+<%= render 'form' %>
