--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -20,6 +20,12 @@
 	</dl> 
 </div>
 
+<h2> Itens do pedido </h2>
+
+<% @order.order_items.each do |item| %>
+	<%= item.quantity %> x <%= item.product_model.name %> 
+<% end %>
+
 <% if @order.pending? %>
 	<%= button_to 'Marcar como entregue', delivered_order_url(@order.id)%>
 	<%= button_to 'Marcar como cancelado', canceled_order_url(@order.id)%>
