--- a/app/views/product_models/show.html.erb
+++ b/app/views/product_models/show.html.erb
@@ -19,5 +19,5 @@
 </div>
 
 <div> 
-	<%= link_to 'Voltar', product_models_url%>
+	<%= link_to 'Voltar', product_models_url, class: "btn btn-primary btn-sm"%>
 </div>
