--- a/app/views/suppliers/show.html.erb
+++ b/app/views/suppliers/show.html.erb
@@ -23,8 +23,8 @@
 </div>
 
 <div> 
-    <%= link_to 'Editar Fornecedor', edit_supplier_url(@supplier.id)%>
-    <%= link_to 'Voltar', suppliers_url%>
+    <%= link_to 'Editar Fornecedor', edit_supplier_url(@supplier.id), class: "btn btn-primary btn-sm" %>
+    <%= link_to 'Voltar', suppliers_url, class: "btn btn-primary btn-sm" %>
 </div>
 
 
