--- a/app/views/warehouses/show.html.erb
+++ b/app/views/warehouses/show.html.erb
@@ -25,8 +25,38 @@
     </dl> 
 </div>
 
+
 <div> 
-    <%= link_to 'Editar Galpão', edit_warehouse_url(@warehouse.id)%>
-    <%= button_to 'Remover Galpão', warehouse_url(@warehouse.id), method: :delete %>
-    <%= link_to 'Voltar', root_url%>
+    <%= link_to 'Editar Galpão', edit_warehouse_url(@warehouse.id), class: "btn btn-primary btn-sm" %>
+    <%= button_to 'Remover Galpão', warehouse_url(@warehouse.id), method: :delete, class: "btn btn-primary btn-sm" %>
+    <%= link_to 'Voltar', root_url, class: "btn btn-primary btn-sm" %>
 </div>
+
+<section id= 'stock_products'> 
+    <h2> Itens em Estoque </h2>
+    <% @stocks.each_pair do |pm, quantity| %> 
+        <li><%= quantity %> x <%= pm.sku %></li>
+    <% end %>
+</section>
+
+<section>
+    <h2 > Saída de Estoque </h2>
+    <%= form_with(url: warehouse_stock_product_destinations_url(@warehouse.id)) do |f| %>
+    <div>
+        <%= f.label(:product_model_id, 'Item para saída')%>
+        <%= f.collection_select(:product_model_id, @product_models, :id, :sku) %>
+    </div>
+    <div>
+        <%= f.label(:recipient, 'Destinatário')%>
+        <%= f.text_field(:recipient) %>
+
+    </div>
+    <div>
+        <%= f.label(:address, 'Endereço destino')%>
+        <%= f.text_field(:address) %>
+    </div>
+        <%= f.submit 'Confirmar retirada'%>
+    <% end %>
+</div>
+
+
